@@ -1,7 +1,7 @@
 <CONFIG lastUpdated="2004-03-18" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
         <DESC>Demonstration configuration for an audio system called BI_TUNER</DESC>
          <!-- ______________________________________  BI_TUNER DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="BI_TUNER" DESCRIPTION="Audio Tuner">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="BI_TUNER" DESCRIPTION="Audio Tuner">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5001"/>
