@@ -1,3 +1,11 @@
+== Released [attachment:wiki:SoftwareReleases:eLife-1.6b12.zip V1.6b12]   ==
+
+''' CBUS '''
+
+Moved MMI into its own object to simpliy Cbus debugging.
+Resolved CBUS startup parameter issues.
+Solved CBUS checksum issues.
+
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6b11.zip V1.6b11]   ==
 
 ''' CBUS '''
